--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@
     height: 700px;
   }
 
+  .title {
+    text-align: center;
+  }
+
   .hometab img {
     display: block;
     margin: auto;
@@ -54,4 +58,42 @@
     position: relative;
     top: 300px;
     text-align: center;
+  }
+
+  .clothes {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    list-style-type: none;
+  }
+  
+  .clothes li {
+    margin-right: 20px;
+  }
+  
+  .clothes img {
+    width: 400px;
+  }
+  
+  button {
+    border: none;
+    cursor: pointer;
+    background-color: inherit;
+    font-size: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  button img {
+    margin-top: 10px;
+  }
+
+  .content {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
   }
