--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@
 .clothes a {
   color: black;
   text-decoration: none;
+
 }
 
 button img {
@@ -143,10 +144,11 @@ button {
   flex-direction: column;
   align-items: center;
   padding: 10px; 
+  background-color: inherit;
   transition: background-color 0.3s, opacity 0.3s; 
 }
 
 button:hover {
-  background-color: rgba(0, 0, 0, 0.1); 
+  background-color: inherit;
   opacity: 0.7; 
 }
